fix: selection bar button's height on mobile

--- a/stylus/ui-components/selectionbar.styl
+++ b/stylus/ui-components/selectionbar.styl
@@ -120,6 +120,8 @@ $selectionbar
 
             button
                 width         em(48px)
+                overflow      hidden
+                text-indent   -5000px
                 padding-left  0
                 color         transparent
                 background-position em(12px)
